2018xxxx - Gnoga V1.3a:

- TIPS: updated.
- INSTALL: rework the wording.
- Makefile:
  . Add GPS launch command for Windows user.
  . Fix some regression using XMLAda and SQLite3.
  . Fix some issues with Zanyblue and Windows.
  . Fix GPR_PROJECT_PATH separator issue for Windows users.
  . Take care of spaces in paths.
  . Set "inst_folder" for default installation directory.
  . Fix issues reported by Jeremiah Breeden.
- Fix Documentation_Dir obsolescence.
- Update TODO, HISTORY and TIPS.

20171022 - Gnoga V1.3-beta:

- Add Ding test from Jeff Carter.
- Fix some audio time types to float instead of integer and fix Ready_To_Play.
- Enhancement from Miguel Ángel Oliván which changes this reassignation by using Ada.Strings.Unbounded.Append to solve the issue making time lag.
- Upgrade and adapt to Simple Components 4.23.

20170723 - Gnoga V1.2b:

- AUTHORS, HISTORY and TIPS updated; miscellaneous fixes.
- Update Jeff Carter's demos from Github. Turn off all style checks.
- Update TIPS and TODO, Javascript fix for Firefox.
- Added Gnoga in JavaFX, a contribution from Jeremiah Breeden.
- Added tutorial for forms.
- Added TIPS.

20170716 - Gnoga V1.3-alpha:

- JQuery UI Javascript source upgrade version 1.12.1.
- Modal dialog support from a contribution of Jeremiah Breeden.
- Enhancement from Miguel Ángel Oliván which bring automatic log file flushing if specified and date / time in log to file.
- Fix multiple calls to EscapeQuotes issue see ticket #37.
- Fix from Gautier to avoid some exception issues without checks (-gnatp).
- Fix in Adablog demo: call Disable_Auto_Set_View to prevent elements taking all the window place.
- JQuery Javascript source upgrade version 3.2.0.
- ACE Javascript source (2016.12.03 Version 1.2.6) is now embedded in Gnoga.
- Update Jeff Carter's Pragmarc from Github.
- Update Jeff Carter's demos from Github.
- Added the possibility to get the number of active connections.
- Added TIPS.
- Added DB_Maker with movies demo from Jeff Carter.